--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.0.0 <4.0.0"
+  flutter: ^3.0.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,7 +31,7 @@ dependencies:
   path_provider: ^2.0.0
   path: ^1.8.2
   file_picker: ^5.0.1
-  share_plus: ^4.0.10+1
+  share_plus: 4.5.2
   encrypt: ^5.0.1
   shared_preferences: any
   permission_handler: ^10.0.0
