--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ environment:
 dependencies:
   path_provider: ^2.0.0
   path: ^1.8.2
-  file_picker: ^5.0.1
   share_plus: 4.5.2
   encrypt: ^5.0.1
   shared_preferences: any
@@ -43,6 +42,7 @@ dependencies:
   json_text_field: ^1.1.0
   flutter_cache_manager: any
   logger: ^2.4.0
+  photo_view: ^0.15.0
   flutter:
     sdk: flutter
 
@@ -50,6 +50,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  file_picker: ^8.0.0+1
+  file_saver: ^0.2.12
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
