--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   file_picker: ^8.0.0+1
-  file_saver: ^0.2.12
+  # file_saver: ^0.2.12
 
 dev_dependencies:
   flutter_launcher_icons: "^0.10.0"
